--- a/frontend/document.html
+++ b/frontend/document.html
@@ -17,8 +17,8 @@
         <!-- Content of the fixed box goes here -->
         <iframe
     allow="microphone;"
-    width="350"
-    height="430"
+    width="100%"
+    height="100%"
     
     src="https://console.dialogflow.com/api-client/demo/embedded/94b63de1-dde0-4c20-8a66-59e1cffc849e">
 </iframe>
@@ -320,6 +320,7 @@
             </div>
         </div>
     </section>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1820.696739819715!2d87.31219843795215!3d22.412609087039574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1d5be511e2274f%3A0x3c026df5f89a93dd!2sAnybelly!5e0!3m2!1sen!2sin!4v1717573048347!5m2!1sen!2sin" width="100%" height="70%" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <section id="contact">
         <div class="contact-container container">
             <div class="contact-img">
