--- a/document2.html
+++ b/document2.html
@@ -18,7 +18,7 @@
         }
 
         body {
-            background: url('https://wallpapers.com/images/featured/food-4k-1pf6px6ryqfjtnyr.jpg') no-repeat center center fixed;
+            background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)),url('https://wallpapers.com/images/featured/food-4k-1pf6px6ryqfjtnyr.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             align-items: center;
@@ -35,7 +35,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.58); /* Adjust the alpha value to make it more or less white */
+             /* Adjust the alpha value to make it more or less white */
             z-index: -1;
         }
         
