--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><a href="#testimonials">Testimonial</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <h1 class="logo">The Chef Restaurant</h1>
+            <h1 class="logo">The Chef</h1>
         </div>
     </nav>
     <section class="showcase-area" id="showcase">
