--- a/document2.html
+++ b/document2.html
@@ -4,10 +4,12 @@
     <title>Payment Gateway</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style_1.css" />
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/736x/f5/19/fa/f519fa0027e85dd0d0c4ec54a17bd563.jpg">
     <style type="text/css">
+    
         * {
             margin: 0;
             padding: 0;
@@ -42,7 +44,7 @@
         section {
             border-radius: 50px;
             max-width: 95%;
-            max-height: 90vh;
+            max-height: 100vh;
             width: 600px;
             background: #cdd7e3e0;
             padding: 50px;
@@ -117,6 +119,9 @@
             max-width: 100%;
             width: 300px;
         }
+
+
+       
     </style>
     <script type="text/javascript">
         $(document).ready(function() {
